force-app/main/default/objects/Animal__c/Animal__c.object-meta.xml
<CustomObject>
    <description>[Animal Shelter Starter] The core object in the Animal Shelter Starter which stores the details about an animal.</description>
    <label>Animal</label>
    <nameField>
        <displayFormat>ANIMAL{00000}</displayFormat>
        <label>Animal Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>