force-app/main/default/objects/Animal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the animal was transferred or came from an organisation then link them here.</inlineHelpText>
    <label>Previous/Current Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>