force-app/main/default/objects/Animal__c/fields/Adoption_Description__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Description__c</fullName>
    <description>An AI generated description of the Animal for adoption promotion</description>
    <label>Adoption Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>