force-app/main/default/objects/Animal__c/fields/Age_Category__c.field-meta.xml
<CustomField>
    <fullName>Age_Category__c</fullName>
    <formula>IF( Age_Years__c &gt;= $CustomMetadata.Animal_Age_Range__mdt.Age_Level_4.Minimum__c, $CustomMetadata.Animal_Age_Range__mdt.Age_Level_4.Description__c ,
 
IF( AND(Age_Years__c &gt;= $CustomMetadata.Animal_Age_Range__mdt.Age_Level_3.Minimum__c, Age_Years__c &lt;=  $CustomMetadata.Animal_Age_Range__mdt.Age_Level_3.Maximum__c ), $CustomMetadata.Animal_Age_Range__mdt.Age_Level_3.Description__c,

IF( AND(Age_Years__c &gt;= $CustomMetadata.Animal_Age_Range__mdt.Age_Level_2.Minimum__c, Age_Years__c &lt;= $CustomMetadata.Animal_Age_Range__mdt.Age_Level_2.Maximum__c ), $CustomMetadata.Animal_Age_Range__mdt.Age_Level_2.Description__c,


IF( AND(Age_Years__c &gt;= $CustomMetadata.Animal_Age_Range__mdt.Age_Level_1.Minimum__c, Age_Years__c &lt;= $CustomMetadata.Animal_Age_Range__mdt.Age_Level_1.Maximum__c ), $CustomMetadata.Animal_Age_Range__mdt.Age_Level_1.Description__c, Null
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Category</label>
    <type>Text</type>
</CustomField>