force-app/main/default/objects/Animal__c/fields/Age_Years__c.field-meta.xml
<CustomField>
    <fullName>Age_Years__c</fullName>
    <formula>IF(ISBLANK(Date_of_Birth__c), 
Estimated_Age__c, FLOOR((TODAY() - Date_of_Birth__c )/365)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated age of the animal based on the Date of Birth</inlineHelpText>
    <label>Age (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>