force-app/main/default/objects/Animal__c/fields/Alerts_Present__c.field-meta.xml
<CustomField>
    <fullName>Alerts_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerts Present</label>
    <type>Checkbox</type>
</CustomField>