force-app/main/default/objects/Animal__c/fields/Animal_Has_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Animal_Has_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Animal Shelter Starter] - Used to drive formula field to indicate that the Animal has Alert records. Updated by flow</description>
    <label>Animal Has Alerts</label>
    <type>Checkbox</type>
</CustomField>