force-app/main/default/objects/Animal__c/fields/Animal_Name__c.field-meta.xml
<CustomField>
    <fullName>Animal_Name__c</fullName>
    <inlineHelpText>Name of the animal</inlineHelpText>
    <label>Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>