force-app/main/default/objects/Animal__c/fields/Animal_Status__c.field-meta.xml
<CustomField>
    <fullName>Animal_Status__c</fullName>
    <label>Animal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>MedicalTreatment</fullName>
                <label>Medical Treatment</label>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Boarding Only</fullName>
            </value>
            <value>
                <fullName>Available for Adoption</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Quarantine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>