force-app/main/default/objects/Animal__c/fields/Average_Ideal_or_Target_Weight_kgs__c.field-meta.xml
<CustomField>
    <fullName>Average_Ideal_or_Target_Weight_kgs__c</fullName>
    <description>The average ideal weight derived from the Min and Max values of the Breed, or target weight entered by the user</description>
    <inlineHelpText>The average ideal weight derived from the Min and Max values of the Breed, or target weight entered by the user</inlineHelpText>
    <label>Average Ideal or Target Weight (kgs)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>