force-app/main/default/objects/Animal__c/fields/Average_Ideal_or_Target_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Average_Ideal_or_Target_Weight_lbs__c</fullName>
    <description>Formula field to calculate the Average Ideal or Target Weight in lbs</description>
    <formula>Average_Ideal_or_Target_Weight_kgs__c * 2.205</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated from Average Ideal or Target Weight kgs</inlineHelpText>
    <label>Average Ideal or Target Weight (lbs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>