force-app/main/default/objects/Animal__c/fields/Behaviours__c.field-meta.xml
<CustomField>
    <fullName>Behaviours__c</fullName>
    <label>Behaviours</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anxious</fullName>
            </value>
            <value>
                <fullName>Bad Recall</fullName>
            </value>
            <value>
                <fullName>Good Recall</fullName>
            </value>
            <value>
                <fullName>Good with Children</fullName>
            </value>
            <value>
                <fullName>Good with other species</fullName>
            </value>
            <value>
                <fullName>Good with same species</fullName>
            </value>
            <value>
                <fullName>Lead Reactive</fullName>
            </value>
            <value>
                <fullName>Pulls on Lead</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Resource Guarding</fullName>
            </value>
            <value>
                <fullName>Separation Anxiety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>