force-app/main/default/objects/Animal__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <inlineHelpText>Breed of Animal</inlineHelpText>
    <label>Breed</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Breed</valueSetName>
    </valueSet>
</CustomField>