force-app/main/default/objects/Animal__c/fields/Breed_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Breed_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The animals breed - lookup to the Breeds object</inlineHelpText>
    <label>Breed</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Breed__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Breed__c</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>