force-app/main/default/objects/Animal__c/fields/Calculated_Age__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Age__c</fullName>
    <formula>TEXT(FLOOR((TODAY() - Date_of_Birth__c )/365)) &amp;&apos; YEARS&apos; &amp; &apos; &apos; &amp; 
TEXT(FLOOR(MOD((TODAY() - Date_of_Birth__c),365)/30)) &amp;&apos; MONTHS&apos; &amp; &apos; &apos; &amp; 
TEXT(MOD(MOD((TODAY() - Date_of_Birth__c),365),30)) &amp;&apos; DAYS&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Age</label>
    <type>Text</type>
</CustomField>