force-app/main/default/objects/Animal__c/fields/Calculated_Time_Known__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Time_Known__c</fullName>
    <formula>TEXT(FLOOR((TODAY() - DATEVALUE(Date_of_Arrival__c ))/365)) &amp;&apos; YEARS&apos; &amp; &apos; &apos; &amp;
TEXT(FLOOR(MOD((TODAY() - DATEVALUE(Date_of_Arrival__c)),365)/30)) &amp;&apos; MONTHS&apos; &amp; &apos; &apos; &amp;
TEXT(MOD(MOD((TODAY() - DATEVALUE(Date_of_Arrival__c)),365),30)) &amp;&apos; DAYS&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Time Known</label>
    <type>Text</type>
</CustomField>