force-app/main/default/objects/Animal__c/fields/Clone_ID__c.field-meta.xml
<CustomField>
    <fullName>Clone_ID__c</fullName>
    <description>Used in the Clone Animal Flow, as a generated ID</description>
    <label>Clone ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>