force-app/main/default/objects/Animal__c/fields/Coat_Type__c.field-meta.xml
<CustomField>
    <fullName>Coat_Type__c</fullName>
    <label>Coat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hairless</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>