force-app/main/default/objects/Animal__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <inlineHelpText>General Colour of the animal</inlineHelpText>
    <label>Primary Colour</label>
    <length>200</length>
    <type>Text</type>
</CustomField>