force-app/main/default/objects/Animal__c/fields/Crossbreed__c.field-meta.xml
<CustomField>
    <fullName>Crossbreed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this is the animal is a crossbreed or mixed breed.</inlineHelpText>
    <label>Crossbreed (Legacy)</label>
    <type>Checkbox</type>
</CustomField>