force-app/main/default/objects/Animal__c/fields/Crossbreed_Formula__c.field-meta.xml
<CustomField>
    <fullName>Crossbreed_Formula__c</fullName>
    <formula>Breed_Lookup__r.Crossbreed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crossbreed</label>
    <type>Checkbox</type>
</CustomField>