force-app/main/default/objects/Animal__c/fields/Current_Weight__c.field-meta.xml
<CustomField>
    <fullName>Current_Weight__c</fullName>
    <inlineHelpText>The current weight of the animal in kg. This field is tracked and changes will
        be logged in the Field History.</inlineHelpText>
    <label>Current Weight (kg)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>