force-app/main/default/objects/Animal__c/fields/Current_Weight_ibs__c.field-meta.xml
<CustomField>
    <fullName>Current_Weight_ibs__c</fullName>
    <formula>Current_Weight__c * 2.205</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Weight (Ibs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>