force-app/main/default/objects/Animal__c/fields/Date_of_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Arrival__c</fullName>
    <inlineHelpText>Date and time which the animal arrived at the shelter</inlineHelpText>
    <label>Date of Arrival</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>