force-app/main/default/objects/Animal__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <inlineHelpText>Date the animal was born, if known.</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>