force-app/main/default/objects/Animal__c/fields/Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Date__c</fullName>
    <label>Deceased Date</label>
    <type>DateTime</type>
</CustomField>