force-app/main/default/objects/Animal__c/fields/Deceased_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Reason__c</fullName>
    <label>Deceased Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dead On Arrival</fullName>
            </value>
            <value>
                <fullName>Death during Treatment</fullName>
            </value>
            <value>
                <fullName>Natural Causes</fullName>
            </value>
            <value>
                <fullName>Put To Sleep (PTS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>