force-app/main/default/objects/Animal__c/fields/Display_on_Map__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box the display this animals location on the Animal Location map</inlineHelpText>
    <label>Display on Map</label>
    <type>Checkbox</type>
</CustomField>