force-app/main/default/objects/Animal__c/fields/Entry_Comments__c.field-meta.xml
<CustomField>
    <fullName>Entry_Comments__c</fullName>
    <inlineHelpText>Any additional comments or items which should be noted about the animal and the reasons around why it was brought in.</inlineHelpText>
    <label>Entry Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>