force-app/main/default/objects/Animal__c/fields/Entry_Reason__c.field-meta.xml
<CustomField>
    <fullName>Entry_Reason__c</fullName>
    <inlineHelpText>The reason the animal has been brought to the Animal Shelter</inlineHelpText>
    <label>Entry Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Abuse</fullName>
            </value>
            <value>
                <fullName>Allergies</fullName>
            </value>
            <value>
                <fullName>Behaviour Issue</fullName>
            </value>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Household cannot afford</fullName>
            </value>
            <value>
                <fullName>Household Unable to Cope</fullName>
            </value>
            <value>
                <fullName>Housing Unsuitable</fullName>
            </value>
            <value>
                <fullName>Relationship Issue</fullName>
            </value>
            <value>
                <fullName>Sick/Injured</fullName>
            </value>
            <value>
                <fullName>Stray</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Owner passed or moved out of home address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>