force-app/main/default/objects/Animal__c/fields/Estimated_Age__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Age__c</fullName>
    <inlineHelpText>The estimated age of the animal upon arrival if the date of birth is not known.</inlineHelpText>
    <label>Estimated Age</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>