force-app/main/default/objects/Animal__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <inlineHelpText>The geolocation of the Animal in Degrees, Minutes, Seconds</inlineHelpText>
    <label>Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>