force-app/main/default/objects/Animal__c/fields/Hold_Until_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Hold_Until_Date_Time__c</fullName>
    <label>Hold Until Date Time</label>
    <type>DateTime</type>
</CustomField>