force-app/main/default/objects/Animal__c/fields/Ideal_Target_Weight_kgs__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Target_Weight_kgs__c</fullName>
    <description>The ideal or Target Weight derived from the Breeds Object</description>
    <label>Ideal/Target Weight (kgs)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>