force-app/main/default/objects/Animal__c/fields/Ideal_Target_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Target_Weight_lbs__c</fullName>
    <formula>Ideal_Target_Weight_kgs__c * 2.205</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ideal/Target Weight (lbs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>