force-app/main/default/objects/Animal__c/fields/Ideal_Weight_Range_kgs__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Weight_Range_kgs__c</fullName>
    <formula>IF(
   OR
     (ISBLANK( Breed_Lookup__r.Ideal_Minimum_Weight_kgs__c),
      ISBLANK( Breed_Lookup__r.Ideal_Maximum_Weight_kgs__c ) ),

      &quot;No Range for Breed&quot;, 
          TEXT(Breed_Lookup__r.Ideal_Minimum_Weight_kgs__c) &amp; &quot; - &quot; &amp; 
          TEXT(Breed_Lookup__r.Ideal_Maximum_Weight_kgs__c)
)</formula>
    <label>Ideal Weight Range (kgs)</label>
    <type>Text</type>
</CustomField>