force-app/main/default/objects/Animal__c/fields/Location_Status__c.field-meta.xml
<CustomField>
    <fullName>Location_Status__c</fullName>
    <inlineHelpText>Displays the snapshot view of the current location</inlineHelpText>
    <label>Location Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>