force-app/main/default/objects/Animal__c/fields/Lost_Found__c.field-meta.xml
<CustomField>
    <fullName>Lost_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the Animal has come into the Shelter as a Lost/Found Animal</inlineHelpText>
    <label>Lost/Found</label>
    <type>Checkbox</type>
</CustomField>