force-app/main/default/objects/Animal__c/fields/Microchip__c.field-meta.xml
<CustomField>
    <fullName>Microchip__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The microchip number or tag number/ID for the animal.</inlineHelpText>
    <label>Microchip Number or Tag</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>