force-app/main/default/objects/Animal__c/fields/Neutered_Spayed__c.field-meta.xml
<CustomField>
    <fullName>Neutered_Spayed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the animal been Neutered/Spayed? Check this box if the answer is yes</inlineHelpText>
    <label>Neutered/Spayed</label>
    <type>Checkbox</type>
</CustomField>