force-app/main/default/objects/Animal__c/fields/Neutered_Spayed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Neutered_Spayed_Date_Time__c</fullName>
    <inlineHelpText>When was the animal Neutered/Spayed</inlineHelpText>
    <label>Neutered/Spayed Date Time</label>
    <type>DateTime</type>
</CustomField>