force-app/main/default/objects/Animal__c/fields/Previous_Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Current_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If boarding then this is the current owner otherwise set this to the previous owner of the animal.</inlineHelpText>
    <label>Previous/Current Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Related Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>