force-app/main/default/objects/Animal__c/fields/PTS_Reason__c.field-meta.xml
<CustomField>
    <fullName>PTS_Reason__c</fullName>
    <inlineHelpText>Put To Sleep (PTS) Reason.</inlineHelpText>
    <label>PTS Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggression to other animals</fullName>
            </value>
            <value>
                <fullName>Aggression to people</fullName>
            </value>
            <value>
                <fullName>Behavioural</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Stress or Anxiety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>