force-app/main/default/objects/Animal__c/fields/Record_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Record_QR_Code__c</fullName>
    <formula>IMAGE(&quot;https://chart.googleapis.com/chart?chs=200x200&amp;cht=qr&amp;chl=&quot;&amp;LEFT($Api.Partner_server_URL_540, FIND(&apos;/services&apos;,$Api.Partner_server_URL_540))&amp;Id,&apos;Scan QR code to open record.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record QR Code</label>
    <type>Text</type>
</CustomField>