force-app/main/default/objects/Animal__c/fields/Related_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Related_Schemes__c</fullName>
    <label>Related Schemes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Animal_Schemes</valueSetName>
    </valueSet>
</CustomField>