force-app/main/default/objects/Animal__c/fields/Secondary_Colour__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Colour__c</fullName>
    <label>Secondary Colour</label>
    <length>254</length>
    <type>Text</type>
</CustomField>