force-app/main/default/objects/Animal__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <inlineHelpText>The Site (Physical Location) the Animal is located in</inlineHelpText>
    <label>Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>