force-app/main/default/objects/Animal__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <formula>Breed_Lookup__r.Species__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Species</label>
    <type>Text</type>
</CustomField>