force-app/main/default/objects/Animal__c/fields/SYSTEM_Breed_Migrated__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM_Breed_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Animal Shelter Starter] used to indicate that the animals record has migrated to the new breeds object. Internal Use Only</description>
    <label>SYSTEM Breed Migrated</label>
    <type>Checkbox</type>
</CustomField>