force-app/main/default/objects/Animal__c/fields/Total_Adoption_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Adoption_Days__c</fullName>
    <label>Total Adoption Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>