force-app/main/default/objects/Animal__c/fields/Total_Away_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Away_Days__c</fullName>
    <label>Total Away Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>