force-app/main/default/objects/Animal__c/fields/Total_Length_of_Stay_in_Shelter_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Length_of_Stay_in_Shelter_Days__c</fullName>
    <inlineHelpText>This is the cumulative stay length the animal has been in the shelter</inlineHelpText>
    <label>Total Length of Stay in Shelter (Days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>