force-app/main/default/objects/Animal__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The type of animal e.g. Dog, etc</inlineHelpText>
    <label>Type (legacy)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Animal_Type</valueSetName>
    </valueSet>
</CustomField>