force-app/main/default/objects/Animal__c/fields/TypeFromBreeds__c.field-meta.xml
<CustomField>
    <fullName>TypeFromBreeds__c</fullName>
    <formula>Breed_Lookup__r.Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>