force-app/main/default/objects/Animal__c/fields/what3words__c.field-meta.xml
<CustomField>
    <fullName>what3words__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Enter a what3words phase in the format word.word.word. Note the location may not appear immediately on saving the record</inlineHelpText>
    <label>what3words</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>