force-app/main/default/objects/Animal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Animal_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Breed__c</columns>
    <columns>Age_Years__c</columns>
    <columns>Calculated_Age__c</columns>
    <columns>Animal_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Animal_Status__c</field>
        <operation>notEqual</operation>
        <value>Deceased</value>
    </filters>
    <label>All</label>
</ListView>