force-app/main/default/objects/Animal__c/listViews/Animals_Marked_as_Lost_Found.listView-meta.xml
<ListView>
    <fullName>Animals_Marked_as_Lost_Found</fullName>
    <columns>NAME</columns>
    <columns>Animal_Name__c</columns>
    <columns>TypeFromBreeds__c</columns>
    <columns>Species__c</columns>
    <columns>Age_Years__c</columns>
    <columns>Calculated_Age__c</columns>
    <columns>Animal_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Animal_Status__c</field>
        <operation>equals</operation>
        <value>New,On Hold,Quarantine</value>
    </filters>
    <filters>
        <field>Lost_Found__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Animals Marked as Lost/Found</label>
</ListView>