force-app/main/default/objects/Animal__c/listViews/Animals_Ready_for_Adoption.listView-meta.xml
<ListView>
    <fullName>Animals_Ready_for_Adoption</fullName>
    <columns>NAME</columns>
    <columns>Animal_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Breed__c</columns>
    <columns>Age_Years__c</columns>
    <columns>Calculated_Age__c</columns>
    <columns>Behaviours__c</columns>
    <columns>Rehoming_Requirements__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Animal_Status__c</field>
        <operation>equals</operation>
        <value>Available for Adoption</value>
    </filters>
    <label>Animals Ready for Adoption</label>
</ListView>