force-app/main/default/objects/Animal__c/listViews/Animals_Receiving_Treatment.listView-meta.xml
<ListView>
    <fullName>Animals_Receiving_Treatment</fullName>
    <columns>NAME</columns>
    <columns>Animal_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Breed__c</columns>
    <columns>Age_Years__c</columns>
    <columns>Calculated_Age__c</columns>
    <columns>Animal_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Animal_Status__c</field>
        <operation>equals</operation>
        <value>MedicalTreatment,Training</value>
    </filters>
    <label>Animals Receiving Treatment</label>
</ListView>