force-app/main/default/objects/Animal__c/listViews/Deceased_Animals.listView-meta.xml
<ListView>
    <fullName>Deceased_Animals</fullName>
    <columns>NAME</columns>
    <columns>Animal_Name__c</columns>
    <columns>TypeFromBreeds__c</columns>
    <columns>Species__c</columns>
    <columns>Age_Years__c</columns>
    <columns>Calculated_Age__c</columns>
    <columns>PTS_Reason__c</columns>
    <columns>Deceased_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Animal_Status__c</field>
        <operation>equals</operation>
        <value>Deceased</value>
    </filters>
    <label>Deceased Animals</label>
</ListView>