force-app/main/default/objects/Animal__c/listViews/New_Animals.listView-meta.xml
<ListView>
    <fullName>New_Animals</fullName>
    <columns>NAME</columns>
    <columns>Animal_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Breed__c</columns>
    <columns>Age_Years__c</columns>
    <columns>Calculated_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Animal_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Animals</label>
</ListView>